--- a/trivia-game/index.html
+++ b/trivia-game/index.html
@@ -4,26 +4,39 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
-		<title>Flash Cards</title>
+		<title>Chinese New Year Trivia</title>
 		<link rel="stylesheet" href="styles.css">
 	</head>
 
 	<body>
-		<h1>Flash Cards</h1>
+		<h1>Chinese New Year Trivia</h1>
 		<h2>Score: <span class="score-label"></span></h2>
-		
+
 		<div class="question">
-			<span class="question-number"></span>.)
-			<span class="question-prompt"></span>		
+			<span class="question-number"></span>.
+			<span class="question-prompt"></span>
+			<img src="" class="question-image">
 		</div>
 
 		<div class="boxes">
-			<div class="box"></div>
-			<div class="box"></div>
-			<div class="box"></div>
-			<div class="box"></div>
+			<div class="box">
+				<span class="box-number">A. </span>
+				<span class="box-prompt"></span>
+			</div>
+			<div class="box">
+				<span class="box-number">B. </span>
+				<span class="box-prompt"></span>
+			</div>
+			<div class="box">
+				<span class="box-number">C. </span>
+				<span class="box-prompt"></span>
+			</div>
+			<div class="box">
+				<span class="box-number">D. </span>
+				<span class="box-prompt"></span>
+			</div>
 		</div>
-	
+
 		<button class="previous-btn">Previous Question</button>
 		<button class="next-btn">Next Question</button>
 
