added more questions and pictures

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 
 	<div class="question">
 		<div>
-			<span><span class="question-number"></span>.</span>
+			<span class="question-number-label">
+				<span class="question-number"></span>.
+			</span>
 			<span class="question-prompt"></span>
 		</div>
 		<div class="question-image"></div>
