--- a/index.html
+++ b/index.html
@@ -49,8 +49,11 @@
 		<button class="nav-btn next-btn">Next Question</button>
 	</div>
 
-	<!-- scripts -->
 	<script src="app.js"></script>
 </body>
 
 </html>
+
+<!-- Great job on the html. -->
+<!-- One thing you could do is to use more semantic section tags instead of all divs and spans. -->
+<!-- header, main, footer, li or p tags could all be useful and make your code more semantic. -->
